samples/_failures_safe/1761667355_c3ae7d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_1cc253aa.c: In function ‘main’:
./samples/SAFE/__tmp_1cc253aa.c:144:5: error: expected declaration or statement at end of input
  144 |     }
      |     ^
